# ifr-1

./: 49-octavi-ifr1.rules  README.md  XP_C172.mcc  pyproject.toml
ifrbridge/: __init__.py  __main__.py  bindings.py  bridge.py  expr.py  ifr1.py  mcc.py  xplane.py
linux/: 70-ch-pedals.rules  99-octavi-ifr1.rules  ifrbridge.service  install.sh
tools/: probe_ifr1.py
