[build-system]
requires = ["setuptools>=77"]    # 77+ provides PEP 639 SPDX license metadata (and PEP 660 editable installs)
build-backend = "setuptools.build_meta"

[project]
name = "ifrbridge"
description = "Lightweight MobiFlight replacement: drive an Octavi IFR-1 against X-Plane from a .mcc config."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Dan Stieglitz" }]
dynamic = ["version"]
dependencies = ["hidapi>=0.14"]

[project.scripts]
ifrbridge = "ifrbridge.__main__:main"

[tool.setuptools]
packages = ["ifrbridge"]

[tool.setuptools.dynamic]
version = { attr = "ifrbridge.__version__" }
